fix(index.astro & _header.scss): changed paths on images and fixed wrong padding on header buttons

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -60,7 +60,7 @@
 .learn-more {
   font-size: 1.15rem;
   font-weight: normal;
-  padding: 0.5rem 1.15rem;
+  padding: 0.5rem 1.05rem;
 
   border: 0;
   border-radius: 2rem;
